--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-spring.application.name=journalApp
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://geniussingare:genius@cluster0.9ooay.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
-#spring.data.mongodb.username=myUser
-#spring.data.mongodb.password=myPassword
+#spring.data.mongodb.username=geniussingare
+#spring.data.mongodb.password=genius
