Update endpoint and test collection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,26 @@ spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
 #spring.data.mongodb.username=geniussingare
 #spring.data.mongodb.password=genius
+
+# TLS/SSL Configuration
+spring.data.mongodb.ssl.enabled=true
+spring.data.mongodb.ssl.invalid-hostname-allowed=true
+
+# Enable MongoDB connection logging
+logging.level.org.springframework.data.mongodb=DEBUG
+logging.level.org.mongodb=DEBUG
+
+# Timeout settings
+spring.data.mongodb.connect-timeout=5000
+spring.data.mongodb.socket-timeout=5000
+
+# Auto-configure MongoDB settings
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration,org.springframework.boot.autoconfigure.data.mongo.MongoDataAutoConfiguration
+spring.profiles.active=test
+
+# Allow bean definition overriding
+spring.main.allow-bean-definition-overriding=true
+
+# Log level settings
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=INFO
